# WareHouse-Inventory-Management-

./: .gitignore  COMPONENTS.md  GUI_INTEGRATION_GUIDE.md  GUI_PROMPT.md  GUI_SETUP_README.md  INVENTORY_SYSTEM_GUIDE.md  NAV2_WAYPOINT_COMPARISON.md  QUICKSTART.md  README.md  Readme.md  WAYPOINT_SYSTEM_README.md  fix_auth.sh  frames_2025-11-08_23.51.38.gv  frames_2025-11-26_12.27.36.gv  frames_2025-11-26_19.48.05.gv  lift_action_client.py  maps11.pgm  maps11.yaml  maps4.pgm  maps5.pgm  maps5.yaml  navigation_setup.yaml  receiver.py  simple_test_icm20948.py  simple_test_icm20948_simple.py  start_mapping.sh  start_navigation.sh  start_web_gui.sh  test_gpio.py
mecanum_description/: CMakeLists.txt  package.xml  readme.md
mecanum_description/config/: controllers.yaml  twist_mux.yaml
mecanum_description/scripts/: cmd_vel_bridge.py  imu_covariance_fixer.py  move_qr_camera.py  odom_tf_publisher.py  rack_lidar_detection.py  rack_waypoints.py  return_to_spawn.py  sensor_bridge.py
mecanum_description/urdf/: depth_camera.xacro  imu.gazebo  lift.xacro  lift_camera.gazebo  mec_rob.trans  mec_rob.xacro
mecanum_hardware/: CMakeLists.txt  README.md  mecanum_hardware.xml  package.xml  testing.docx
mecanum_hardware/config/: controller.yaml  ekf_localization.yaml  hardware_controllers.yaml  imu.yaml  lidar.yaml  waypoint_follower.rviz
mecanum_hardware/firmware/esp32_stepper_controller/: esp32_stepper_controller.ino
mecanum_hardware/include/mecanum_hardware/: mecanum_backup.hpp  mecanum_stepper_interface.hpp
mecanum_hardware/launch/: hardware.launch.py  hardware_mapping.launch.py  hardware_navigation.launch.py  real_robot.launch.py  real_robot_navigation.launch.py  warehouse_navigation.launch.py  waypoint_mapping.launch.py
mecanum_hardware/scripts/: actuator_pid_control_node.py  deploy_to_rpi.sh  height_monitor_node  imu_publisher_node.py  joystick_teleop.py  magnetometer_publisher_node.py  quick_serial_check.py  ros2_web_bridge.py  sensor_data_simulator.py  test_esp_connection.py  test_individual_motor.py  warehouse_navigation_coordinator.py  waypoint_path_visualizer.py
mecanum_hardware/src/: mecanum_stepper_interface.cpp
mecanum_in_gazebo/: CMakeLists.txt  README.md  package.xml
mecanum_in_gazebo/arena/: arena.world  project_tree.txt  setup_qr_model.py
mecanum_in_gazebo/arena/qr_codes/: model.config  model.sdf
mecanum_in_gazebo/arena/racks/: model.sdf
mecanum_in_gazebo/arena/tapes/: model.config  model.sdf
mecanum_in_gazebo/config/: controller.yaml  teleop_joy.yaml
mecanum_in_gazebo/launch/: control_joy.py  controller.launch.py  controller.yaml  display.launch.py  final_gazebo.launch.py  gazebo.launch.py  spawn.launch.py
mecanum_in_gazebo/scripts/: cmd_vel_bridge.py  cmd_vel_to_mecanum.py  imu_covariance_fixer.py  mecanum_teleop_key.py  odom_tf_publisher.py  sensor_bridge.py  set_initial_pose.py  test_goal.py  velocity_smoother.py
mecanum_in_gazebo/urdf/: depth_camera.xacro  imu.gazebo  lidar.gazebo  lidar.xacro  lift.xacro  lift_camera.gazebo  lift_camera.xacro  mec_rob.gazebo  mec_rob.ros2_control.hardware.xacro  mec_rob.ros2_control.xacro  mec_rob.xacro
mecanum_navigation_setup/: CMakeLists.txt  README.md  package.xml
mecanum_navigation_setup/config/: cartographer_mapping.lua  cartographer_odom.lua  nav2_params.yaml
mecanum_navigation_setup/launch/: amcl_navigation.launch.py  cartographer.launch.py  cartographer_navigation.launch.py  navigation.launch.py  navigation_stvl.launch.py  slam.launch.py
mecanum_navigation_setup/maps/: map.pbstream  maps.yaml  my_maps.pgm  my_maps.yaml  new_maps.pgm  new_maps.yaml  updated_map_for_tape.py  virtual_wall_creator.py  wall_detection2.py  wall_detection_with_lines_ahead.py
mecanum_navigation_setup/scripts/: create_keepout_mask.py  nav_goal_and _scan_to_and _fro.py
src/mecanum_hardware/: CMakeLists.txt  package.xml
src/mecanum_hardware/config/: box_filters.yaml  camera.yaml  example_waypoints.yaml  hardware_controllers.yaml  waypoint_follower_params.yaml
src/mecanum_hardware/docs/: wiring_guide.md
src/mecanum_hardware/launch/: actuator_complete.launch.py  autonomous_inventory_mission.launch.py  camera.launch.py  complete_navigation.launch.py  create_waypoints.launch.py  hardware_mapping.launch.py  hardware_navigation.launch.py  integrated_system_launch.py  inventory_mission.launch.py  joystick_teleop.launch.py  lidar_filter.launch.py  waypoint_creation.launch.py  waypoint_follower.launch.py  waypoint_mapping.launch.py
src/mecanum_hardware/scripts/: ESP32_COMMUNICATION_GUIDE.md  actuator_control_node.py  enhanced_joystick_teleop.py  height_monitor_node.py  imu_publisher_node.py  inventory_mission_manager.py  laser_sensor.py  lift_controller_node.py  nav2_waypoint_follower.py  pid_tuner.py  ros2_web_bridge.py  rpi_motor_control.py  teleop_with_waypoint_save.py  test_esp_connection.py  test_websocket_bridge.py  waypoint_follower_node.py  waypoint_manager_node.py  waypoint_recorder_node.py
src/mecanum_hardware/src/: mecanum_backup.cpp  mecanum_stepper_interface.cpp
src/warehouse_rover_database/: CMakeLists.txt  MONGODB_SETUP.md  database.py  package.xml
src/warehouse_rover_database/config/: neon_params.yaml
src/warehouse_rover_database/launch/: complete_system_enhanced.launch.py  complete_system_rpi.launch.py  database.launch.py  warehouse_rover_neon.launch.py  warehouse_rover_neon_rpi.launch.py
src/warehouse_rover_database/resource/: warehouse_rover_database
src/warehouse_rover_database/src/: database_manager.cpp  inventory_node.cpp
warehouse/warehouse_rover_database/: CMakeLists.txt  database.py  package.xml
warehouse/warehouse_rover_database/src/: inventory_node.cpp
warehouse/warehouse_rover_image_processing/: CMakeLists.txt  package.xml
warehouse/warehouse_rover_lift_control/: CMakeLists.txt  README.md  package.xml
warehouse/warehouse_rover_mission_control/: CMakeLists.txt  package.xml
warehouse/warehouse_rover_rack_detection/: CMakeLists.txt  package.xml
warehouse_rover_qr_detection/: CMakeLists.txt  package.xml
warehouse_rover_qr_detection/config/: qr_detector_params.yaml
(+322 files in other folders)
