<?xml version="1.0"?>
<package format="3">
  <name>warehouse_rover_qr_detection</name>
  <version>0.1.0</version>
  <description>QR code detection and parsing for warehouse rover</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>warehouse_rover_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>libzbar-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
