<?xml version="1.0"?>
<package format="3">
  <name>warehouse_rover_database</name>
  <version>0.1.0</version>
  <description>Database storage for warehouse inventory</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>warehouse_rover_msgs</depend>
  <depend>libsqlite3-dev</depend>
  <depend>usb-cam</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
