<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_rover_lift_control</name>
  <version>0.0.0</version>
  <description>Lift control for warehouse rover</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>